crates/plotnik-lib/tests/02-parser/recovery_validation/field_equals_typo_no_space.txt
(node name=(identifier))
==== diagnostics ====
error: fields use `:`, not `=`
 --> query.ptk:1:11
  |
1 | (node name=(identifier))
  |           ^
  |
help: use `:`
  |
1 - (node name=(identifier))
1 + (node name:(identifier))
  |
